# timetrkr

./: .dockerignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  build.sh  dev-setup.sh  hello.py  pyproject.toml  run-prod.sh  start-dev.sh
.github/workflows/: build-and-push.yml
app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
app/routers/: auth.py  time_entries.py  users.py
app/services/: time_entry_service.py  user_service.py
db/: .gitignore
frontend/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: EditTimeEntryModal.vue  HelloWorld.vue  LastTimeEntryEdit.vue  NavBar.vue  TimeEntryForm.vue  TodayTimePanel.vue  WeekTimePanel.vue
frontend/src/composables/: useTimeEntries.js
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js  theme.js  timeEntries.js  timeEntryData.js  timeEntryForm.js
frontend/src/utils/: dateUtils.js  timeUtils.js  validation.js
frontend/src/views/: AnalysisView.vue  DashboardView.vue  HistoryView.vue  LoginView.vue  ProfileView.vue
k8s/: deployment.yml  ingress.yml  kustomization.yml  namespace.yml  persistent-volume.yml  service.yml
migrations/versions/: f4ae39fb39c7_initial_database_schema.py
static/: app.js  index.html  index.html.bak
tests/: test_validation.py
