[project]
name = "timetrkr2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.12",
  "passlib[bcrypt]>=1.7.4",
  "pydantic>=2.11.3",
  "pytest>=8.3.5",
  "python-jose[cryptography]>=3.4.0",
  "sqlalchemy>=2.0.40",
]
